[gd_scene load_steps=12 format=3 uid="uid://dx7wihga3glyf"]

[ext_resource type="Script" uid="uid://c05iqumk0lolq" path="res://scripts/main_menu.gd" id="1_v2s4e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_background"]
bg_color = Color(0.05, 0.05, 0.08, 1)

[sub_resource type="FontVariation" id="FontVariation_title"]
variation_embolden = 0.6

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font = SubResource("FontVariation_title")
font_size = 64
font_color = Color(0.85, 0.85, 1, 1)
outline_size = 4
outline_color = Color(0.12, 0.15, 0.3, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0.15, 0.6)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_subtitle"]
font_size = 24
font_color = Color(0.7, 0.75, 0.9, 1)
outline_size = 1
outline_color = Color(0.12, 0.15, 0.25, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0.1, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.25, 0.3, 0.45, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 4
border_color = Color(0.5, 0.55, 0.8, 0.8)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0.15, 0.4)
shadow_size = 6
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_pressed"]
bg_color = Color(0.1, 0.12, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.45, 0.7, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(0.15, 0.18, 0.28, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 4
border_color = Color(0.3, 0.35, 0.55, 0.8)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0.1, 0.3)
shadow_size = 4
shadow_offset = Vector2(0, 2)

[sub_resource type="Animation" id="Animation_fade_in"]
resource_name = "fade_in"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HexParticles:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.7)]
}

[sub_resource type="Animation" id="Animation_idle"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuContainer/VBoxContainer/TitleContainer/Title:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.9, 0.92, 1, 0.9), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HexParticles:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.7), Color(1, 1, 1, 0.5), Color(1, 1, 1, 0.7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_menu"]
_data = {
&"fade_in": SubResource("Animation_fade_in"),
&"idle": SubResource("Animation_idle")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v2s4e")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_background")

[node name="HexParticles" type="CPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0.7)
position = Vector2(576, 324)
amount = 60
lifetime = 8.0
preprocess = 4.0
speed_scale = 0.5
emission_shape = 3
emission_rect_extents = Vector2(650, 400)
direction = Vector2(0, -1)
spread = 20.0
gravity = Vector2(0, 0)
initial_velocity_min = 15.0
initial_velocity_max = 35.0
angle_min = -10.0
angle_max = 10.0
scale_amount_min = 3.0
scale_amount_max = 12.0
color = Color(0.3, 0.4, 0.7, 0.2)

[node name="AccentLine1" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -4.0
offset_bottom = 648.0
grow_horizontal = 0
color = Color(0.4, 0.5, 0.8, 0.6)

[node name="AccentLine2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -4.0
offset_right = 1152.0
grow_vertical = 0
color = Color(0.4, 0.5, 0.8, 0.6)

[node name="HexDecoLeft" type="Polygon2D" parent="."]
position = Vector2(100, 300)
color = Color(0.2, 0.3, 0.6, 0.3)
polygon = PackedVector2Array(-20, -35, 20, -35, 40, 0, 20, 35, -20, 35, -40, 0)

[node name="HexDecoRight" type="Polygon2D" parent="."]
position = Vector2(1052, 300)
color = Color(0.2, 0.3, 0.6, 0.3)
polygon = PackedVector2Array(-20, -35, 20, -35, 40, 0, 20, 35, -20, 35, -40, 0)

[node name="MenuContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2
alignment = 1

[node name="TitleContainer" type="HBoxContainer" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TitleAccentLeft" type="ColorRect" parent="MenuContainer/VBoxContainer/TitleContainer"]
custom_minimum_size = Vector2(60, 4)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.5, 0.6, 0.9, 0.8)

[node name="Title" type="Label" parent="MenuContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "HEXFORGE CONQUEST"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleAccentRight" type="ColorRect" parent="MenuContainer/VBoxContainer/TitleContainer"]
custom_minimum_size = Vector2(60, 4)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.5, 0.6, 0.9, 0.8)

[node name="Subtitle" type="Label" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
text = "◦ Build, Conquer, Survive ◦"
label_settings = SubResource("LabelSettings_subtitle")
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="MenuContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="MenuContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="PlayButton" type="Button" parent="MenuContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
text = "▶ START ADVENTURE"

[node name="SettingsButton" type="Button" parent="MenuContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
text = "⚡ CONFIGURATION"

[node name="QuitButton" type="Button" parent="MenuContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
text = "✕ EXIT GAME"

[node name="Spacer2" type="Control" parent="MenuContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VersionLabel" type="Label" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Version 1.0.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_menu")
}
autoplay = "fade_in"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="SettingsPanel" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsBackground" type="ColorRect" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="SettingsContainer" type="Panel" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -300.0
offset_right = 350.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_background")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel/SettingsContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsTitleContainer" type="HBoxContainer" parent="SettingsPanel/SettingsContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SettingsTitleAccentLeft" type="ColorRect" parent="SettingsPanel/SettingsContainer/VBoxContainer/SettingsTitleContainer"]
custom_minimum_size = Vector2(40, 3)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.5, 0.6, 0.9, 0.8)

[node name="SettingsTitle" type="Label" parent="SettingsPanel/SettingsContainer/VBoxContainer/SettingsTitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "◆ CONFIGURATION"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1

[node name="SettingsTitleAccentRight" type="ColorRect" parent="SettingsPanel/SettingsContainer/VBoxContainer/SettingsTitleContainer"]
custom_minimum_size = Vector2(40, 3)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.5, 0.6, 0.9, 0.8)

[node name="Spacer1" type="Control" parent="SettingsPanel/SettingsContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="AudioContainer" type="VBoxContainer" parent="SettingsPanel/SettingsContainer/VBoxContainer"]
layout_mode = 2

[node name="AudioTitleContainer" type="HBoxContainer" parent="SettingsPanel/SettingsContainer/VBoxContainer/AudioContainer"]
layout_mode = 2
alignment = 1

[node name="AudioAccentLeft" type="ColorRect" parent="SettingsPanel/SettingsContainer/VBoxContainer/AudioContainer/AudioTitleContainer"]
custom_minimum_size = Vector2(30, 2)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.3, 0.4, 0.7, 0.6)

[node name="AudioTitle" type="Label" parent="SettingsPanel/SettingsContainer/VBoxContainer/AudioContainer/AudioTitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "♪ Audio Settings"
label_settings = SubResource("LabelSettings_subtitle")
horizontal_alignment = 1

[node name="AudioAccentRight" type="ColorRect" parent="SettingsPanel/SettingsContainer/VBoxContainer/AudioContainer/AudioTitleContainer"]
custom_minimum_size = Vector2(30, 2)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.3, 0.4, 0.7, 0.6)

[node name="Spacer2" type="Control" parent="SettingsPanel/SettingsContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="VolumeLabel" type="Label" parent="SettingsPanel/SettingsContainer/VBoxContainer"]
layout_mode = 2
text = "Master Volume: 100%"
horizontal_alignment = 1

[node name="MasterVolumeSlider" type="HSlider" parent="SettingsPanel/SettingsContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="Spacer3" type="Control" parent="SettingsPanel/SettingsContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="GraphicsContainer" type="VBoxContainer" parent="SettingsPanel/SettingsContainer/VBoxContainer"]
layout_mode = 2

[node name="GraphicsTitleContainer" type="HBoxContainer" parent="SettingsPanel/SettingsContainer/VBoxContainer/GraphicsContainer"]
layout_mode = 2
alignment = 1

[node name="GraphicsAccentLeft" type="ColorRect" parent="SettingsPanel/SettingsContainer/VBoxContainer/GraphicsContainer/GraphicsTitleContainer"]
custom_minimum_size = Vector2(30, 2)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.3, 0.4, 0.7, 0.6)

[node name="GraphicsTitle" type="Label" parent="SettingsPanel/SettingsContainer/VBoxContainer/GraphicsContainer/GraphicsTitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "◈ Display Settings"
label_settings = SubResource("LabelSettings_subtitle")
horizontal_alignment = 1

[node name="GraphicsAccentRight" type="ColorRect" parent="SettingsPanel/SettingsContainer/VBoxContainer/GraphicsContainer/GraphicsTitleContainer"]
custom_minimum_size = Vector2(30, 2)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.3, 0.4, 0.7, 0.6)

[node name="Spacer4" type="Control" parent="SettingsPanel/SettingsContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="FullscreenCheck" type="CheckBox" parent="SettingsPanel/SettingsContainer/VBoxContainer"]
layout_mode = 2
text = "  Fullscreen Mode"

[node name="Spacer5" type="Control" parent="SettingsPanel/SettingsContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="VsyncCheck" type="CheckBox" parent="SettingsPanel/SettingsContainer/VBoxContainer"]
layout_mode = 2
text = "  VSync Enabled"

[node name="Spacer6" type="Control" parent="SettingsPanel/SettingsContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="BackButton" type="Button" parent="SettingsPanel/SettingsContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 10
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
text = "◄ RETURN TO MENU"

[connection signal="pressed" from="MenuContainer/VBoxContainer/ButtonsContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/ButtonsContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/ButtonsContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="value_changed" from="SettingsPanel/SettingsContainer/VBoxContainer/MasterVolumeSlider" to="." method="_on_volume_changed"]
[connection signal="toggled" from="SettingsPanel/SettingsContainer/VBoxContainer/FullscreenCheck" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="SettingsPanel/SettingsContainer/VBoxContainer/VsyncCheck" to="." method="_on_vsync_toggled"]
[connection signal="pressed" from="SettingsPanel/SettingsContainer/VBoxContainer/BackButton" to="." method="_on_settings_back_pressed"]
